--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Explore the portfolio of Covenant Monday, a passionate and skilled Backend Engineer and Smart Contract Developer. Showcasing projects, skills, and experience in building modern, impactful digital solutions.">
+        <meta property="og:title" content="John Doe - Blockchain Developer">
+
+        
         <title>Covenant Monday Portfolio</title>
         <link rel="stylesheet" href="/css/style.css" />
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
@@ -119,7 +123,7 @@
                                 I’m always exploring new ideas and building creative solutions. Feel free to browse around and get in 
                                 touch if you’d like to connect or collaborate.
                             </p>
-                            <a href="https://github.com/Covenantmondei/Student_dashboard" target="_blank" class="github-link">
+                            <a href="https://github.com/Covenantmondei/My-Portfolio.git" target="_blank" class="github-link">
                                 <img src="/images/github.jpg" alt="GitHub" />
                             </a>
                         </div>
@@ -154,7 +158,7 @@
                         data-netlify="true" 
                         netlify-honeypot="bot-field"
                         class="contact-form"
-                        action="success.html"
+                        action="/success.html"
                     >
                         <input type="hidden" name="form-name" value="contact">
                         
