--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Explore the portfolio of Covenant Monday, a passionate and skilled Backend Engineer and Smart Contract Developer. Showcasing projects, skills, and experience in building modern, impactful digital solutions.">
-        <meta property="og:title" content="John Doe - Blockchain Developer">
+        <meta property="og:title" content="Covenant Monday - Backend Engineer & Smart Contract Developer" />
 
         
         <title>Covenant Monday Portfolio</title>
